moved the node label css into the editor.css, fixed the z-index issue with initial edges

--- a/FuzzEd/static/css/editor/canvas.css
+++ b/FuzzEd/static/css/editor/canvas.css
@@ -6,79 +6,3 @@
     background-color: white;
     z-index:          0;
 }
-
-.fuzzed-node {
-    text-align: center;
-}
-
-.fuzzed-node-image {
-    display:  inline-block;
-    position: relative;
-    margin:   0px 3px 3px 3px;
-    z-index:  100;
-}
-
-.fuzzed-node-labels {
-    position:         absolute;
-    z-index:          110; /* above connections */
-    background-color: rgba(255, 255, 255, 0.7);
-}
-
-.fuzzed-node-label {
-    display:          block;
-    position:         relative;
-    line-height:      15px;
-    font-weight:      bold;
-    font-size:        0.8em;
-    text-align:       center;
-    word-wrap:        break-word;
-    margin-bottom:    3px;
-}
-
-.fuzzed-node-label-probability {
-    font-size:   11px;
-    font-weight: normal;
-    font-style:  italic;
-}
-
-.fuzzed-node-halo-connect {
-    /* XXX: this is a temporary solution */
-    background-color:       #409FFF;
-    position:               absolute;
-    visibility:             hidden;
-    top:                    56px;
-    left:                   19px;
-    z-index:                150; /* above image, TODO: let halo care about that */
-    cursor:                 move;
-    -webkit-border-radius:  7px;
-    -moz-border-radius:     7px;
-    border-radius:          7px;
-    /* fix for bootstrap icon looking strange in a circle */
-    width:                  15px;
-    height:                 15px;
-    background-position:    -407px -96px;
-}
-
-.fuzzed-node-selected .fuzzed-node-halo-connect {
-    background-color:       #FF9640;
-}
-
-.fuzzed-node:hover .fuzzed-node-halo-connect {
-    visibility: visible;
-}
-
-.fuzzed-node-optional-indicator {
-    width:   12px;
-    height:  12px;
-    margin:  0 auto;
-    z-index: 100; /* above connection */
-}
-
-.jsplumb-endpoint {
-    opacity: 0;
-    z-index: 50; /* above connection, below image */
-}
-
-.jsplumb-endpoint.jsplumb-endpoint-hover {
-    opacity: 1;
-}
